--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,8 @@
     },
     "require": {
         "php": "^7.0",
-        "mailgun/mailgun-php": "^2.3"
+        "mailgun/mailgun-php": "^2.3",
+        "php-http/message": "^1.5",
+        "php-http/guzzle6-adapter": "^1.1"
     }
 }
