--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     "authors": [
         {
             "name": "Florian Gärber",
-            "email": "hello@floriangaer.be",
-            "homepage": "http://floriangaer.be",
+            "email": "magnesium-php@florian.sh",
+            "homepage": "https://florian.sh",
             "role": "Developer"
         }
     ],
@@ -19,10 +19,10 @@
     "scripts": {
         "test": [
             "phpunit",
-            "php-cs-fixer fix --dry-run"
+            "php-cs-fixer fix --dry-run --config=.php_cs"
         ],
-        "fix-style": "php-cs-fixer fix --config=.php_cs",
-        "phpdoc-phar": "php phpDocumentor.phar -d ./src/Magnesium -t ./phpdoc"
+        "style": "php-cs-fixer fix --config=.php_cs",
+        "phpdoc": "php phpDocumentor.phar -d ./src/Magnesium -t ./phpdoc"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1",
